Search mechanism was added